# lib_calc

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  lezard.txt  main.cpp
Golden_master_file/: .~lock.gmf.ods#  gmf.ods
func_test/: CMakeLists.txt  genepop_test.cpp  genotype_genepop_format.txt  test_ar.txt  test_ar_mv.txt
func_tests/: CMakeLists.txt  Test_func.txt  genepop_test.cpp  genotype_genepop_format.txt  test_ar.txt  test_ar_mv.txt
lib/Catch/: catch.hpp
lib/alglib/: CMakeLists.txt
lib/random/: random_cstl.h  random_cstl.hpp  random_cstl.tcc
source/: CMakeLists.txt  calc_stat.cpp  calc_stat.hpp  calc_stat_dl.cpp  calc_stat_dl.hpp  custom_vec.cpp  custom_vec.hpp  data_plane_vec.cpp  data_plane_vec.hpp  data_plane_vec.tpp  input.cpp  input.hpp  input.tpp  output_file.cpp  terst
sources/: CMakeLists.txt  arg_pars.cpp  arg_pars.hpp  arg_pars_gss.cpp  arg_pars_gss.hpp  arg_parser.cpp  calc_stat.cpp  calc_stat.hpp  calc_stat_dl.cpp  calc_stat_dl.hpp  common_tools.cpp  common_tools.hpp  common_tools.tpp  data_plane_vec.cpp  data_plane_vec.hpp  data_plane_vec.tpp  exe.cpp  exe.hpp  input.cpp  input.hpp  input.tpp  output_file.cpp  output_file.hpp  output_file.tpp  run.cpp  run.hpp  terst
unit_test/: CMakeLists.txt  calc_stat_dl_test.cpp  calc_stat_test.cpp  common_tools_test.cpp  custom_vec_test.cpp  data_plane_vec_test.cpp  float_dist_test.txt  input_test.cpp  input_test.txt  input_test_win_form.txt  output_file_test.cpp
unit_tests/: CMakeLists.txt  calc_stat_dl_test.cpp  calc_stat_test.cpp  common_tools_test.cpp  data_plane_vec_test.cpp  input_test.cpp  input_test.map  input_test.txt  output_file_test.cpp  test_selector.txt
